--- a/portfolio/src/components/Home.css
+++ b/portfolio/src/components/Home.css
@@ -19,7 +19,7 @@ html, body {
   }
   
   .navbar {
-	position: absolute;
+	/* position: absolute; */
 	top: 0;
 	left: 0;
 	width: 100%;
@@ -51,7 +51,7 @@ html, body {
   
   .greeting {
 	color: #FFF;
-	position: absolute;
+	/* position: absolute; */
 	top: 32px;
 	left: 77px;
 	font-family: 'Onest', sans-serif;
@@ -71,14 +71,14 @@ html, body {
   }
 
   .first-name {
-	position: absolute;
+	/* position: absolute; */
 	top: 95px;
 	left: 50px;
 	display: block;
   }
   
   .last-name {
-	position: absolute;
+	/* position: absolute; */
 	top: 250px;
 	left: 50px;
 	display: block;
@@ -87,7 +87,7 @@ html, body {
   .title {
 	color: #FFF;
 	font-family: 'Onest', sans-serif;
-	position: absolute;
+	/* position: absolute; */
 	top: 405px;
 	left: 65px;
 	font-size: 35px;
@@ -100,8 +100,8 @@ html, body {
   }
   
   .gradient-bottom {
-	position: absolute;
-	bottom: 0;
+	/* position: relative; */
+	margin-bottom: 50px;
 	left: 0;
 	width: 100%;
 	height: 100px;
